2011-02-19  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17656: Unit test fails because of invalid clear.gif (Thanks to Alexander Stehlik)

2011-02-17  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17592: ExtDirect API calls are splitted in single requests and slows down page loading

2011-02-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17616: htmlArea RTE: Link dialogue doesn't open when anchor class is set with double quotes

2011-02-17  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17355: Dependencies in sysext 'version' and 'workspaces'
	* Fixed bug #17244: Error Message while Updating 4.4.6 > 4.5

2011-02-16  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17422: cObj->FORM() wasn't processing the $formData parameter (Thanks to Hubertus Golf)

2011-02-16  Francois Suter  <francois.suter@typo3.org>

	* Cleanup #17513: Improve sys_note CSH file
	* Fixed bug #17385: Restore proper behavior of LOAD_REGISTER (Thanks to Jo Hasenau)

2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17587: htmlArea RTE: RTE should not be enabled on Android

2011-02-14  Steffen Gebert  <steffen.gebert@typo3.org>

	* Fixed bug #17564: Red question marks in QuickEdit instead of icons (Thanks to Jürgen Ettmueller)

2011-02-14  Georg Ringer <typo3@ringerge.org>

	* Fixed bug #16890: tcaTree in flexforms still breaks

2011-02-14  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17541: cookies are not required in CLI mode / cookieSecure blocks cli

2011-02-13  Steffen Gebert  <steffen.gebert@typo3.org>

	* Added Test #17495: Add Unit Tests for t3lib_div::resolveBackPath()

2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17553: css_styled_content ext_tables.php links to wrong static file for TYPO3 4.4
	* Fixed bug #16534: Exception message for missing memcache wrong
	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)